--- a/product1.html
+++ b/product1.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="js/flipclock.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/product1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>Dash</title>
 </head>
 
 <body>
-    <div class="container-fluid container-custom fixed-top">
+    <div class="container-fluid container-custom">
         <header>
             <!-- navbar -->
-            <nav class="navbar navbar-expand-lg bg-custom justify-content-around">
+            <nav class="navbar navbar-expand-lg bg-custom justify-content-around fixed-top">
 
                 <a class="navbar-brand ml-3 mr-5 padd-custom" href="index.html">
                     <img src="logo.jpg" width="60" height="60" alt="">
@@ -142,77 +143,124 @@
                     </div>
                 </div>
             </nav>
-    </div>
-    </header>
-    <section class="row">
-        <div class="col-8">
-            <h4>Android developer for beginner</h4>
-            <div class="row">
-                <div class="co-3">
-                    <img src="android-beginner.jpg" alt="..." class="img-thumbnail img-custom">
+        </header>
+        <h4 class=text-dark>Android developer for beginner</h4>
+        <section class="row">
+            <div class="col-10">
+                <div class="row">
+                    <div class="col-3">
+                        <img src="android-beginner.jpg" alt="..." class="img-thumbnail img-custom m-5">
+                    </div>
+                    <div class="col mt-5 ml-5 bio-custom">
+                        <strong>
+                            <p>Eko Prasetiyo</p>
+                        </strong>
+                        <strong>
+                            <p>Lecturer Android</p>
+                        </strong>
+                        <strong>
+                            <p>Duration 40 hour</p>
+                        </strong>
+                    </div>
                 </div>
-                <div class="col">
-                    <p>Eko Prasetiyo</p>
-                    <br>
-                    <p>Lecturer Android</p>
-                    <br>
-                    <p>Duration 40 hour</p>
+                <div class="row">
+                    <div class="col judul-custom">
+                        <h2>Class Description</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-justify mt-5 isi-custom">
+                        <h6>
+                            <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora autem animi veniam ab maiores
+                                laboriosam facere in quos at ipsam aperiam voluptate quod ut odio, sit nihil fugit, eum commodi?</div>
+                            <div>Nesciunt totam accusamus voluptatem sint aut. Reiciendis harum magni nesciunt aut, necessitatibus
+                                perferendis! Dolor perspiciatis in consectetur ducimus. Corporis voluptatibus reprehenderit
+                                sapiente illo possimus, reiciendis ab aperiam accusantium at libero?</div>
+                            <div>Molestiae, nemo iure placeat sed itaque veritatis culpa architecto vero non nihil et, eveniet
+                                nisi! Porro sit asperiores dolor doloribus facere, perspiciatis assumenda et laboriosam molestias
+                                pariatur libero. Eligendi, ipsa.</div>
+                            <div>Ducimus nihil tempora ipsum placeat totam vero non neque corrupti iste quaerat libero error consequatur,
+                                rem quidem sit aliquid eum voluptate? Recusandae voluptas explicabo aspernatur consequatur
+                                ex inventore, maxime sunt?</div>
+                            <div>Et itaque distinctio officia? Assumenda rem quisquam tenetur aspernatur a odit perferendis similique
+                                aliquam nemo inventore, voluptate ea modi, cum esse quam pariatur doloremque et nam eos debitis
+                                itaque officia.</div>
+                        </h6>
+                    </div>
                 </div>
             </div>
-            <div class="row"></div>
-        </div>
-        <div class="col">
+            <div class="col">
+                <nav class="nav flex-column nav-custom mt-5">
+                    <a class="nav-link active" href="#">Lesson 1</a>
+                    <a class="nav-link" href="#">Lesson 2</a>
+                    <a class="nav-link" href="#">Lesson 3</a>
+                    <a class="nav-link" href="#">Lesson 4</a>
+                    <a class="nav-link" href="#">Lesson 5</a>
+                    <a class="nav-link border1" href="#">Lesson 6</a>
+                    <a class="nav-link" href="#">Task 1 </a>
+                    <a class="nav-link" href="#">Task 2 </a>
+                    <a class="nav-link" href="#">Task 3 </a>
+                    <a class="nav-link" href="#">Task 4 </a>
+                    <a class="nav-link" href="#">Task 5 </a>
+                    <a class="nav-link border1" href="#">Task 6 </a>
+                    <a class="nav-link" href="#">Project 1 </a>
+                    <a class="nav-link" href="#">Project 2 </a>
 
-        </div>
-    </section>
-    <!-- footer -->
-    <footer>
-        <div class="row ">
-            <div class="col text-footer ">
-                <ul>
-                    <li class="li-footer ">
-                        <strong>PT. Digital Learn</strong>
-                    </li>
-                    <li class="li-footer ">Jl. Blabla No.8</li>
-                    <li class="li-footer ">Dmana saja</li>
-                    <li class="li-footer ">digital@learn.com</li>
-                </ul>
+                </nav>
             </div>
-            <div class="col text-footer ">
-                <ul>
-                    <li class="li-footer ">
-                        <strong>Belanja</strong>
-                    </li>
-                    <li class="li-footer ">Belanja di Dash</li>
-                    <li class="li-footer ">Cara berbelanja</li>
-                    <li class="li-footer ">Pembayaran</li>
-                    <li class="li-footer ">Pengembalian dana</li>
-                </ul>
+        </section>
+    </div>
+    
+
+    <div class="container-fluid">
+        <!-- footer -->
+        <footer>
+            <div class="row ">
+                <div class="col text-footer ">
+                    <ul>
+                        <li class="li-footer ">
+                            <strong>PT. Digital Learn</strong>
+                        </li>
+                        <li class="li-footer ">Jl. Blabla No.8</li>
+                        <li class="li-footer ">Dmana saja</li>
+                        <li class="li-footer ">digital@learn.com</li>
+                    </ul>
+                </div>
+                <div class="col text-footer ">
+                    <ul>
+                        <li class="li-footer ">
+                            <strong>Belanja</strong>
+                        </li>
+                        <li class="li-footer ">Belanja di Dash</li>
+                        <li class="li-footer ">Cara berbelanja</li>
+                        <li class="li-footer ">Pembayaran</li>
+                        <li class="li-footer ">Pengembalian dana</li>
+                    </ul>
+                </div>
+                <div class="col text-footer ">
+                    <ul>
+                        <li class="li-footer ">
+                            <strong>Contact</strong>
+                        </li>
+                        <li class="li-footer ">
+                            <a href=" ">
+                                <img src="fb.svg " alt=" " class="img-footer ">
+                            </a>
+                        </li>
+                        <li class="li-footer ">
+                            <a href=" ">
+                                <img src="twitter.svg " alt=" " class="img-footer ">
+                            </a>
+                        </li>
+                        <li class="li-footer ">
+                            <a href=" ">
+                                <img src="whatsapp.svg " alt=" " class="img-footer ">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col text-footer ">
-                <ul>
-                    <li class="li-footer ">
-                        <strong>Contact</strong>
-                    </li>
-                    <li class="li-footer ">
-                        <a href=" ">
-                            <img src="fb.svg " alt=" " class="img-footer ">
-                        </a>
-                    </li>
-                    <li class="li-footer ">
-                        <a href=" ">
-                            <img src="twitter.svg " alt=" " class="img-footer ">
-                        </a>
-                    </li>
-                    <li class="li-footer ">
-                        <a href=" ">
-                            <img src="whatsapp.svg " alt=" " class="img-footer ">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+        </footer>
     </div>
 
     <!-- Optional JavaScript -->
