--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="js/flipclock.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <!-- <link rel=”icon” type=”image/jpg” href="icon.jpg”> -->
+    <link rel=”icon” type=”image/jpg” href="icon.jpg”>
     <title>Dash</title>
 </head>
 
