--- a/product1.html
+++ b/product1.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="js/flipclock.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/product1.css">
+    <link rel=”icon” type=”image/jpg” href="icon.jpg”>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>Dash</title>
 </head>
